# AAAI-Fable

./: .env.example  .gitignore  AGENT.md  CLAUDE.md  PROGRESS.md  README.md  build_concept_inputs.py  explore_concepts.py  pyproject.toml  requirements.txt  run_demo.py  run_real_batch.py  run_real_demo.py
doc/: 后续思路与建议.md  审稿意见与完善方案.md  寓言生成对话.xmind  当前系统流程图.md  研究规划_M2NA完整方案.md
doc/paper-reading-site/: .gitignore  astro.config.mjs  package-lock.json  package.json
doc/数据集/: 数据集codex给的建议.md
doc/文章思路迭代（主要看这个）/: ConceptFable_AAAI_收窄任务_学术问题定义.md
doc/论文调研/: 寓言三分支阅读材料.md  竞品精读_第一档.md
doc/评估/: 评估部分codex给的建议1.md  评估部分codex给的建议2.md
kg_rag/: README.md  __init__.py  __main__.py  cli.py  config.py  env.py  io.py  llm_client.py  llm_config.py  models.py  neo4j_config.py  paths.py  text_cleaning.py
kg_rag/concepts/: __init__.py  cards.py  enrichment.py  jsonl.py  prompts.py  quality.py  selection.py
kg_rag/evaluation/: __init__.py  parser.py  pipeline.py  prompts.py  report.py  rubric.py  rules.py
kg_rag/examples/: sample_draft.txt
kg_rag/generation/: __init__.py  prompts.py  review.py  review_parse.py  writer.py
kg_rag/ingest/: __init__.py  neo4j_loader.py  normalize_k12.py
kg_rag/pipeline/: __init__.py  batch_stories.py  concept_fables.py  llm_demo.py  local_demo.py  rewrite_concept_fables.py
kg_rag/prompts/: __init__.py  (+1 more)
paper-reading-site/: README.md  astro.config.mjs  package-lock.json  package.json
src/: README.md
tests/: test_concept_cards.py  test_concept_fables.py  test_concept_selection.py  test_concept_store.py  test_evaluation.py  test_gc_extractor.py  test_k12_loader.py  test_pipeline.py  test_result_store.py  test_reviser.py  test_tc_builder.py
文章思路迭代（主要看这个）/: ConceptFable_AAAI_问题定义方法摘要Introduction整合稿.md
论文调研/: M2NA_2024-2026相关论文检索.md
(+156 files in other folders)
