[project]
name = "aaai-fable"
version = "0.1.0"
description = "M2NA research prototype for mechanism-to-narrative analogy generation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=7.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
