[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aaai-fable"
version = "0.1.0"
description = "Minimal Python prototype scaffold for GraphRAG and concept-to-fable experiments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "neo4j>=5.23.0",
  "neo4j-graphrag>=1.6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[project.scripts]
kg-rag = "kg_rag.cli:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["kg_rag*"]
